Fix handling windows path uris